Undid some changes